--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "mobx-react": "^7.5.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "ts-mockito": "^2.6.1",
+    "tsyringe": "^4.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,6 +43,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0"
+    "gh-pages": "^4.0.0",
+    "typescript": "^4.7.4"
   }
 }
