--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^6.4.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "craco-alias": "^3.0.1",
+    "mobx-react": "^7.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "mobx-react": "^7.5.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "ts-mockito": "^2.6.1",
@@ -17,11 +19,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "deploy": "npm run build && gh-pages -d build",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -44,6 +45,7 @@
   },
   "devDependencies": {
     "gh-pages": "^4.0.0",
+    "tsconfig-paths-webpack-plugin": "^4.0.0",
     "typescript": "^4.7.4"
   }
 }
